--- a/src/app/country/country.component.html
+++ b/src/app/country/country.component.html
@@ -14,6 +14,7 @@
 [view]="view.bind(this)"
 [upload]="uploadCountryData.bind(this)"
 [download]="downloadCountryData.bind(this)"
+(selectionChange)="onSelectionChange($event)"
 >
 
     <ng-template #createFormTemplate let-item>
