--- a/src/app/curd-layout/curd-layout.component.html
+++ b/src/app/curd-layout/curd-layout.component.html
@@ -90,24 +90,38 @@
             <!-- Table Content -->
             <div class="w-full overflow-x-auto">
                 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z0 w-full">
-
+                    
+                    <!-- Checkbox Column -->
+                    <ng-container *ngIf="masterScreen.permission.selectable" matColumnDef="select">
+                        <th mat-header-cell *matHeaderCellDef class="bg-white-50 text-gray-700 text-left py-3 px-4 font-bold">
+                            <mat-checkbox (change)="$event ? masterToggle() : null"
+                                         [checked]="selection.hasValue() && isAllSelected()"
+                                         [indeterminate]="selection.hasValue() && !isAllSelected()">
+                            </mat-checkbox>
+                        </th>
+                        <td mat-cell *matCellDef="let row" class="py-3 px-4 border-b border-gray-200">
+                            <mat-checkbox (click)="$event.stopPropagation()"
+                                         (change)="$event ? toggleRowSelection(row) : null"
+                                         [checked]="selection.isSelected(row)">
+                            </mat-checkbox>
+                        </td>
+                    </ng-container>
+            
                     <!-- Dynamic Columns -->
                     <ng-container *ngFor="let column of masterScreen.columnConfig" [matColumnDef]="column.columnKey">
-                        <th
-                        mat-header-cell
-                        *matHeaderCellDef
-                        class="bg-white-50 text-gray-700 text-left py-3 px-4 font-bold cursor-pointer"
-                        (click)="changeSortDir(column.columnKey)"
-                      >
-                        <div class="flex items-center">
-                          {{ column.columnName }}
-                          <!-- Only show icon if column is currently sorted -->
-                          <mat-icon *ngIf="sortBy === column.columnKey" class="ml-1 text-sm">
-                            {{ sortDir === 'asc' ? 'arrow_upward' : 'arrow_downward' }}
-                          </mat-icon>
-                        </div>
-                      </th>
-
+                        <th mat-header-cell 
+                            *matHeaderCellDef
+                            class="bg-white-50 text-gray-700 text-left py-3 px-4 font-bold cursor-pointer"
+                            (click)="changeSortDir(column.columnKey)">
+                            <div class="flex items-center">
+                                {{ column.columnName }}
+                                <!-- Only show icon if column is currently sorted -->
+                                <mat-icon *ngIf="sortBy === column.columnKey" class="ml-1 text-sm">
+                                    {{ sortDir === 'asc' ? 'arrow_upward' : 'arrow_downward' }}
+                                </mat-icon>
+                            </div>
+                        </th>
+            
                         <td mat-cell *matCellDef="let row" class="py-3 px-4 border-b border-gray-200">
                             <div [ngSwitch]="column.dataType">
                                 <span *ngSwitchCase="'date'">{{ row[column.columnKey] | date }}</span>
@@ -133,7 +147,7 @@
                             </div>
                         </td>
                     </ng-container>
-
+            
                     <!-- Actions Column -->
                     <ng-container matColumnDef="actions">
                         <th mat-header-cell *matHeaderCellDef
@@ -155,13 +169,15 @@
                             </div>
                         </td>
                     </ng-container>
-
+            
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                    <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="hover:bg-gray-50 bg-white">
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;" 
+                        class="hover:bg-gray-50 bg-white"
+                        [class.selected-row]="selection.isSelected(row)"
+                        (click)="masterScreen.permission.selectable ? toggleRowSelection(row) : null">
                     </tr>
-
                 </table>
-
+            
                 <!-- Empty State Message -->
                 <div *ngIf="dataSource.data.length === 0" class="py-16 flex flex-col items-center justify-center">
                     <mat-icon class="text-gray-300 text-6xl mb-4">list_alt</mat-icon>
